php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #55870 PDO ignores all SSL parameters when used with mysql native driver
Submitted: 2011-10-08 00:36 UTC Modified: 2011-10-08 11:54 UTC
From: pawel at prochot dot co dot uk Assigned: pajoye (profile)
Status: Closed Package: PDO related
PHP Version: 5.3.8 OS: Independent
Private report: No CVE-ID: None
 [2011-10-08 00:36 UTC] pawel at prochot dot co dot uk
Description:
------------
PDO (MySQL) mysql_driver.c has two spelling errors causing SSL related 
configuration to be ignored. The spelling mistakes occur in conditional 
statements responsible for running code initialising and later processing of 
those parameters.

File: php-5.3.8/ext/pdo_mysql/driver.c
Line 628 contains "PDO_USE_MYSLQND" note mySLQnd instead of mySQLnd. The same 
happens in line 715

Affected versions at least 5.3.7 and 5.3.8.


Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2011-10-08 06:16 UTC] pajoye@php.net
Automatic comment from SVN on behalf of pajoye
Revision: http://svn.php.net/viewvc/?view=revision&revision=317882
Log: - fix bug #55870, PDO ignores all SSL parameters when used with mysql native driver
 [2011-10-08 06:17 UTC] pajoye@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: pajoye
 [2011-10-08 06:17 UTC] pajoye@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Sat Sep 26 18:00:02 2026 UTC