- fix bug #55870, PDO ignores all SSL parameters when used with mysql native driver